--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,6 +659,22 @@ p {
       padding-top: 80px;
       padding-bottom: 80px; } }
 
+/*===========================
+      8.EXPERIMENTS css 
+===========================*/
+.experiments-area {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #fff; }
+  @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .experiments-area {
+      padding-top: 100px;
+      padding-bottom: 100px; } }
+  @media (max-width: 767px) {
+    .experiments-area {
+      padding-top: 80px;
+      padding-bottom: 80px; } }
+
 .contact-area {
   padding-top: 120px;
   padding-bottom: 120px; }
@@ -731,7 +747,7 @@ p.form-message.error {
   color: #f00; }
 
 /*===========================
-       8.FOOTER css 
+       9.FOOTER css 
 ===========================*/
 .footer-area {
   background-color: #f4f6f7; }
