--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,9 @@ p {
     z-index: 99; }
   .navgition.sticky {
     position: fixed;
-    background-color: #fff;
+    background-color: hsla(0,0%,100%,.65);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
     -moz-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
